# facelib_playground

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-env  Readme.md  conf.json
include/: base64.h  faceid.h  lombo.h
os/cpu/ubuntu18/usr/include/opencv2/: cvconfig.h
script/: download.sh
src/: base64.cpp  faceid.cpp  main.cpp
